--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tsef"
 version = "0.3.0"
-edition = "2024"
+edition = "2021"
 readme = "README.md"
 repository = "https://github.com/iostreamer-X/tf"
 license = "MIT"
@@ -13,3 +13,7 @@ description = "A CLI tool that filters TypeScript compiler output to show errors
 ansi-parser = "0.9.1"
 path-matchers = "1.0.2"
 clap = { version = "4.5.41", features = ["derive"] }
+
+[dev-dependencies]
+tempfile = "3.8"
+heapless = "0.8"
